test/expected/strict_unset_special.out
[CompoundList]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "before"]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "$1"]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "not-reached"]
[Word
  Unquoted "echo"
]
[Word
  Unquoted "before"
]
[Word
  Unquoted "echo"
]
[Word
  Variable "1"
]
[Word
  Unquoted "echo"
]
[Word
  Unquoted "not-reached"
]
before
shit: 3:7: error: Unable to expand '1' because the parameter is not set.
     3 |  echo "$1"
       |        ^~ here.
note: Replace it with ${1-} if empty expansion is desired.
